--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-recaptcha-that-works": "^1.3.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-smtp-mailer": "^1.2.5",
     "react-native-timeago": "Tordx/react-native-timeago",
     "react-native-vector-icons": "^9.2.0",
